--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,20 @@
 asgiref==3.5.2
+certifi==2022.6.15
+charset-normalizer==2.1.0
 Django==4.0.6
-djangorestframework==3.13.1
-pytz==2022.1
-sqlparse==0.4.2
+django-crispy-forms==1.14.0
+django-filter==22.1
 django-widget-tweaks==1.4.12
+djangorestframework==3.13.1
 gunicorn==20.1.0
+idna==3.3
+importlib-metadata==4.12.0
+Markdown==3.4.1
 psycopg==3.0.15
 psycopg2-binary==2.9.3
+pytz==2022.1
+requests==2.28.1
+sqlparse==0.4.2
+urllib3==1.26.11
 whitenoise==6.2.0
+zipp==3.8.1
