--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 Django==4.0.6
 django-crispy-forms==1.14.0
+django-decouple==2.0
 django-filter==22.1
 django-widget-tweaks==1.4.12
 djangorestframework==3.13.1
